package Recursos;

import Recursos.Recursos;

public class Pozo extends Recursos {
    public Pozo(int x, int y, int tiempoAparicion) {
        setX(x);
        setY(y);
        setTiempoAparicion(tiempoAparicion);
    }
    @Override
    public void efecto() {

    }
}
